--- a/style.css
+++ b/style.css
@@ -1,88 +1,78 @@
-html, body {
-  margin: 0;
+#camera-app {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   height: 100vh;
+  background-color: #000;
+  color: #fff;
   overflow: hidden;
-  background-color: #000000;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  height: 10%;
+  background-color: red;
+}
+
+.camera-icon, .flash-icon {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.camera-container {
+  position: relative;
+  flex: 1;
+  overflow: hidden;
+  height: 70%;
+  background-color: blue;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  transform: scaleX(-1);
+  position: relative;
+  z-index: 1;
 }
 
 canvas {
-  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-#autoBtn {
+.shutter-button {
   position: absolute;
-  padding: 10px 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #ff9900;
-  border: none;
-  border-radius: 50%;
-  font-size: 24px;
-  width: 100px; /*50*/
-  height: 100px; /*50*/
-  text-align: center;
-  line-height: 50px;
-  bottom: 20vh; /* 5% 아래로 조정 */
-  right: 2vw; /* 2% 오른쪽으로 조정 */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-
-#captureBtn {
-  position: absolute;
-  bottom: 6vh; /* 6% 아래로 조정 */
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  padding: 10px 20px;
-  background-color: black;
-  border: 4px solid white;
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  cursor: pointer;
+  z-index: 2;
 }
 
-#poseBtn {
-  position: absolute;
-  bottom: 7vh; /* 7% 아래로 조정 */
-  right: 10%; /*left: 75%;*/
-  width: 130px;
-  height: 130px;
-  background-color: #747474;
-  color: #fff;
-  border: none;
-  border-radius: 20%;
-  font-size: 32px;
-  text-align: center;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  height: 20%;
+  background-color: green;
+  margin-top: -1px;
 }
 
-#screenBtn {
-  position: absolute;
-  bottom: 7vh; /* 7% 아래로 조정 */
-  left: 10%;
-  width: 130px;
-  height: 130px;
-  background-color: #747474;
-  color: #fff;
-  border: none;
-  border-radius: 20%;
-  font-size: 32px;
-  text-align: center;
+.gallery-icon, .switch-camera-icon {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 
-
-.image-container {
-  flex: 0 0 auto;
-  margin-right: 10px; /* 이미지 간 간격 조절 */
-}
-
-img {
-  width: 100%; /* 이미지가 부모 요소에 가득 차도록 설정 */
-  height: auto;
-  display: block;
-}
