--- a/style.css
+++ b/style.css
@@ -1,82 +1,63 @@
-html, body {
-  margin:0; padding:0;
-}
-
-#camera-app {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  background-color: #000;
-  color: #fff;
-  overflow: hidden;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  height: 10%;
-  background-color: red;
-}
-
-.camera-icon, .flash-icon {
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  border-radius: 50%;
-}
-
-.camera-container {
-  position: relative;
-  flex: 1;
-  overflow: hidden;
-  height: 70%;
-  background-color: blue;
-}
-
-video {
-  width: 100%;
-  height: 100%;
-  transform: scaleX(-1);
-  position: relative;
-  z-index: 1;
+html {
+  margin: 0;
+  padding: 0;
 }
 
 canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: block;
+  border: 2px solid #000;
 }
 
-.shutter-button {
+body {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  /*background-color: #000000;*/
+}
+
+#camera-container {
+  position: relative;
+  
+  /*추가 항목*/
+  width: 100%; height: 66vh;
+}
+
+video {/*추가 항목*/
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#autoBtn {
+  position: absolute;
+  /*bottom: 20px;*/
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: 3px solid red; /*none*/
+  /*cursor: pointer;*/
+  font-size: 16px;
+}
+
+#bottom-container {
+  position: relative;
+  background-color: blue;
+}
+
+#captureBtn {
   position: absolute;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 2;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: 3px solid red; /*none*/
+  /*cursor: pointer;*/
+  font-size: 16px;
 }
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  height: 20%;
-  background-color: green;
-  margin-top: -1px;
-}
-
-.gallery-icon, .switch-camera-icon {
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-
